# goat_routing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/goat_routing/: __init__.py  create_route.py
src/goat_routing/algorithm/: a_star.py  route_map.py  router.py
src/goat_routing/algorithm/map/: map_generator_sim.py  map_interface.py
tests/: __init__.py
