[project]
name = "goat_routing"
version = "0.0.1"
license = { file = "LICENSE" }
authors = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" },
]
maintainers = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }
]
description = "Libary to create optimal paths given energy, weather and robot conditions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Education",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "astar>=0.99",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "world-map-generator>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
